@@ -1,5 +1,13 @@
 2003-10-16  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/calendar-component.c (calendar_component_init): create
+	directories for the newly-created calendars.
+
+	* gui/dialogs/new-calendar.c (create_new_source_with_group): use
+	e_mkdir_hier instead of mkdir.
+
+2003-10-16  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/calendar-component.c (calendar_component_init): if no groups
 	are present in the configuration, create the "On This Computer"
 	group and the "Personal" and "Work" calendars on it.
